force-app/main/default/objects/Account/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <formula>IF( AND(
       ISBLANK(Website),
       ISBLANK(Parent_Account__r.Website)
    ),
    &quot;&quot;,
    IF( NOT(ISBLANK(Parent_Account__r.Website)),
        Parent_Account__r.Website + &quot;/&quot; + External_ID__c,
        Website + &quot;/&quot; + External_ID__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External URL</label>
    <type>Text</type>
</CustomField>