force-app/main/default/objects/Account/fields/Latest_Child_URL__c.field-meta.xml
<CustomField>
    <fullName>Latest_Child_URL__c</fullName>
    <label>Latest Child URL</label>
    <type>Url</type>
</CustomField>