force-app/main/default/objects/Account/fields/Parent_Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_URL__c</fullName>
    <formula>Parent.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account URL</label>
    <type>Text</type>
</CustomField>